[gd_scene load_steps=59 format=2]

[ext_resource path="res://sprites/characters/right walk 2.png" type="Texture" id=1]
[ext_resource path="res://sprites/characters/idle right 2.png" type="Texture" id=2]
[ext_resource path="res://sprites/characters/jump 1.png" type="Texture" id=3]
[ext_resource path="res://sprites/characters/right walk 3.png" type="Texture" id=4]
[ext_resource path="res://sprites/characters/right walk 4.png" type="Texture" id=5]
[ext_resource path="res://sprites/characters/right walk 7.png" type="Texture" id=6]
[ext_resource path="res://sprites/characters/right walk 8.png" type="Texture" id=7]
[ext_resource path="res://sprites/characters/idle right 1.png" type="Texture" id=8]
[ext_resource path="res://sprites/characters/fall.png" type="Texture" id=9]
[ext_resource path="res://sprites/characters/right walk 6.png" type="Texture" id=10]
[ext_resource path="res://sprites/characters/right walk 5.png" type="Texture" id=11]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=13]
[ext_resource path="res://sprites/characters/right jump 4.png" type="Texture" id=14]
[ext_resource path="res://sounds/Closing-Squeaky-Door-1-www.fesliyanstudios.com.wav" type="AudioStream" id=15]
[ext_resource path="res://sprites/characters/jump 2.png" type="Texture" id=16]
[ext_resource path="res://sprites/UI/continuesprite.png" type="Texture" id=17]
[ext_resource path="res://sprites/UI/dialoguebox.png" type="Texture" id=18]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707161511.PNG" type="Texture" id=19]
[ext_resource path="res://sprites/Act1settings/scenetwo/chest/Untitled687-20200625204059.PNG" type="Texture" id=20]
[ext_resource path="res://sounds/211192__yuval__small-clock-in-room.wav" type="AudioStream" id=21]
[ext_resource path="res://sprites/Act1settings/scenetwo/chest/Untitled687-20200625204054.PNG" type="Texture" id=22]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707154117.PNG" type="Texture" id=23]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707161443.PNG" type="Texture" id=24]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707142120.PNG" type="Texture" id=25]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707161610.PNG" type="Texture" id=26]
[ext_resource path="res://sprites/Act1settings/scenetwo/book.png" type="Texture" id=27]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707141804.PNG" type="Texture" id=28]
[ext_resource path="res://sprites/Act1settings/scenetwo/room.png" type="Texture" id=29]
[ext_resource path="res://sounds/Squeaky-Wooden-Floor-Footsteps--Fast--www.fesliyanstudios.com.wav" type="AudioStream" id=30]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707154143.PNG" type="Texture" id=31]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707161624.PNG" type="Texture" id=32]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707161533.PNG" type="Texture" id=33]
[ext_resource path="res://sprites/Act1settings/scenetwo/chair.png" type="Texture" id=34]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707161423.PNG" type="Texture" id=35]
[ext_resource path="res://Act1/playerscenes/scene2/chair.gd" type="Script" id=36]
[ext_resource path="res://Act1/playerscenes/scene2/doortime.gd" type="Script" id=37]
[ext_resource path="res://Act1/playerscenes/scene2/chest.gd" type="Script" id=38]
[ext_resource path="res://player.gd" type="Script" id=39]
[ext_resource path="res://Act1/playerscenes/scene2/dialoguebox.gd" type="Script" id=40]
[ext_resource path="res://Act1/playerscenes/scene2/room.gd" type="Script" id=41]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 14 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 16 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 80.2556
height = 325.864

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 280.633, 960.481 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2181.35, 183.839 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 114.194, 976.696 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 415.623, 252.636 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=10]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1620, -0.25, 0, 0.25, 0, 1640, -0.25, 0, 0.25, 0, 1620, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 361.851, 206.003 )

[sub_resource type="DynamicFont" id=14]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=15]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1620, -0.25, 0, 0.25, 0, 1640, -0.25, 0, 0.25, 0, 1620, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="DynamicFont" id=16]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 33 ), ExtResource( 26 ), ExtResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 41 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
__meta__ = {
"_edit_lock_": true
}

[node name="room" type="Sprite" parent="ParallaxBackground/ParallaxLayer/Sprite"]
position = Vector2( 1817.08, 988.94 )
scale = Vector2( 1.07359, 1.09314 )
texture = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 44.7449, 133.958 )
script = ExtResource( 39 )

[node name="playerSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 169.337, 1500.94 )
frames = SubResource( 1 )
animation = "fall"
speed_scale = 1.5

[node name="playerCollision" type="CollisionShape2D" parent="player"]
position = Vector2( 129.129, 1562.49 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 142.006, 1562.49 )
current = true
limit_left = 0
limit_top = 0
limit_right = 3640
limit_bottom = 2160

[node name="Walk" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 30 )
volume_db = -3.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -326.61, 976.264 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1709.19, 2120.58 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3752.03, 988.94 )
shape = SubResource( 5 )

[node name="doortime" type="Area2D" parent="."]
position = Vector2( -244.216, 988.94 )
script = ExtResource( 37 )

[node name="Label" type="Label" parent="doortime"]
margin_left = 92.1046
margin_top = -843.166
margin_right = 893.105
margin_bottom = -563.166
custom_fonts/font = SubResource( 6 )
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="doortime"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="doortime"]
stream = ExtResource( 15 )

[node name="chair" type="Area2D" parent="."]
script = ExtResource( 36 )

[node name="Sprite" type="Sprite" parent="chair"]
position = Vector2( 2884.37, 1640.13 )
scale = Vector2( 1.03208, 0.973302 )
z_index = -1
texture = ExtResource( 34 )

[node name="chairLabel" type="Label" parent="chair"]
margin_left = 2644.76
margin_top = 1114.72
margin_right = 3305.76
margin_bottom = 1225.72
custom_fonts/font = SubResource( 7 )
text = "read"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="chair"]
position = Vector2( 2896.73, 1696.45 )
shape = SubResource( 8 )

[node name="dialoguebox" type="Control" parent="chair"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="chair/dialoguebox"]
margin_left = 609.0
margin_top = 1550.0
margin_right = 2978.0
margin_bottom = 2050.0
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="chair/dialoguebox"]
margin_left = 751.0
margin_top = 1638.0
margin_right = 2837.0
margin_bottom = 1958.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="chair/dialoguebox"]
position = Vector2( 1831.17, 1620 )
scale = Vector2( 1.538, 1.958 )
texture = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="chair/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 10 )

[node name="Tween" type="Tween" parent="chair/dialoguebox"]

[node name="Type" type="AudioStreamPlayer" parent="chair/dialoguebox"]
stream = ExtResource( 13 )
volume_db = -5.0
pitch_scale = 0.7

[node name="AnimatedSprite" type="AnimatedSprite" parent="chair"]
position = Vector2( 2884.37, 1640.13 )
scale = Vector2( 1.032, 0.973 )
z_index = -1
frames = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="chair"]
stream = ExtResource( 21 )
autoplay = true

[node name="chest" type="Area2D" parent="."]
script = ExtResource( 38 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="chest"]
position = Vector2( 1607.63, 1119.92 )
z_index = -1
frames = SubResource( 12 )
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest"]
position = Vector2( 1750.27, 1767.51 )
shape = SubResource( 13 )

[node name="dialoguebox" type="Control" parent="chest"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="chest/dialoguebox"]
margin_left = 609.0
margin_top = 1550.0
margin_right = 2978.0
margin_bottom = 2050.0
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="chest/dialoguebox"]
anchor_right = 17.776
anchor_bottom = 13.082
margin_left = 767.0
margin_top = 1659.0
margin_right = 2116.96
margin_bottom = 1434.72
custom_fonts/normal_font = SubResource( 14 )
bbcode_enabled = true
bbcode_text = " "
text = " "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="chest/dialoguebox"]
position = Vector2( 1831.17, 1620 )
scale = Vector2( 1.53765, 1.95808 )
texture = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="chest/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 15 )

[node name="Tween" type="Tween" parent="chest/dialoguebox"]

[node name="chestLabel" type="Label" parent="chest"]
margin_left = 1294.1
margin_top = 1029.29
margin_right = 2363.1
margin_bottom = 1283.29
custom_fonts/font = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type2" type="AudioStreamPlayer" parent="chest"]
stream = ExtResource( 13 )
volume_db = -5.0
pitch_scale = 0.7

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1065.05, 945.423 )
scale = Vector2( 1.04249, 0.926498 )
frames = SubResource( 17 )
frame = 8
playing = true
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="doortime" to="doortime" method="_on_doortime_body_entered"]
[connection signal="body_exited" from="doortime" to="doortime" method="_on_doortime_body_exited"]
[connection signal="body_entered" from="chair" to="chair" method="_on_chair_body_entered"]
[connection signal="body_entered" from="chair" to="chair/dialoguebox" method="_on_chair_body_entered"]
[connection signal="body_exited" from="chair" to="chair" method="_on_chair_body_exited"]
[connection signal="body_exited" from="chair" to="chair/dialoguebox" method="_on_chair_body_exited"]
[connection signal="tree_exited" from="chair/dialoguebox" to="chair" method="_on_dialoguebox_tree_exited"]
[connection signal="tween_completed" from="chair/dialoguebox/Tween" to="chair/dialoguebox" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="chest" to="chest" method="_on_chest_body_entered"]
[connection signal="body_exited" from="chest" to="chest" method="_on_chest_body_exited"]
[connection signal="tween_completed" from="chest/dialoguebox/Tween" to="chest" method="_on_Tween_tween_completed"]
